--- a/websitesi/index.html
+++ b/websitesi/index.html
@@ -30,6 +30,11 @@
        <button>Abone Ol!</button>
        </div>       
       </div>
+    
+    <form action="islem.php" method="post" enctype="multipart/form-data" >
+<input type="file" name="foto">
+<button type="submit">YÜKLE</button>
+</form>
     </div>
   </div>
 </body>
